traefikIngressController/traefik-deployment-letsencrypt.yaml
apiVersion: v1
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
        version: 1.0.0
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v1.0.0
        name: traefik-ingress-lb
        resources:
#          limits:
#            cpu: 200m
#            memory: 30Mi
#          requests:
#            cpu: 100m
#            memory: 20Mi
        ports:
        - containerPort: 80
          hostPort: 80
        - containerPort: 443
          hostPort: 443
        - containerPort: 8080
        args:
        - --web
        - --kubernetes
        - --logLevel=INFO
        volumeMounts:
        - name: traefik-conf
          mountPath: /etc/traefik/traefik.toml
        - name: certs 
          mountPath: /certs
      volumes:
      - hostPath:
          path: /mnt/kube/traefik/traefik-ssl.toml
        name: traefik-conf
      - hostPath:
          path: /mnt/kube/traefik/certs/
        name: certs
